tests/snapshots/pane__app__tests__observe_mode.snap
---
source: src/app.rs
expression: content
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────── Search ┐┌ History (1) ───────────────┐"
"│ /                                                                                                          ││▸ 12:00:00  ✓   0.0s        │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘│                            │"
"┌────────────────────────────────────────────────────────────────────────────────────────────────────────────┐│                            │"
"│  Cargo.lock                                                                                                ││                            │"
"│  Cargo.toml                                                                                                ││                            │"
"│  dist-workspace.toml                                                                                       ││                            │"
"│  docs                                                                                                      ││                            │"
"│  README.md                                                                                                 ││                            │"
"│  rustfmt.toml                                                                                              ││                            │"
"│  src                                                                                                       ││                            │"
"│  target                                                                                                    ││                            │"
"│  tests                                                                                                     ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"│                                                                                                            ││                            │"
"└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────┘"
" Observe -> Word <tab> - cycle                                                                                     ?-Help q/esc - Quit/Back "
