tests/snapshots/pane__app__tests__render_app.snap
---
source: src/app.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                          │"
"│    1 Cargo.lockCargo.tomldocsREADME.mdrustfmt.tomlsrctargettests                                                                         │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌─────────────────────────────────┐┌───────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                 ││                                                                                                       │"
"│ test                            ││ Cargo.lock                                                                                            │"
"│                                 ││ Cargo.toml                                                                                            │"
"│                                 ││ docs                                                                                                  │"
"│                                 ││ README.md                                                                                             │"
"│                                 ││ rustfmt.toml                                                                                          │"
"│                                 ││ src                                                                                                   │"
"│                                 ││ target                                                                                                │"
"│                                 ││ tests                                                                                                 │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"└─────────────────────────────────┘└───────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Normal                                                                                                            ?-Help q/esc - Quit/Back "
