tests/snapshots/pane__app__tests__zen_mode.snap
---
source: src/app.rs
expression: content
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                                                          │"
"│    1 Cargo.lockCargo.tomldist-workspace.tomldocsREADME.mdrustfmt.tomlsrctargettestsTODO.md                                               │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"│                                                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌─────────────────────────────────┐┌───────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                 ││                                                                                                       │"
"│ test                            ││ Cargo.lock                                                                                            │"
"│                                 ││ Cargo.toml                                                                                            │"
"│                                 ││ dist-workspace.toml                                                                                   │"
"│                                 ││ docs                                                                                                  │"
"│                                 ││ README.md                                                                                             │"
"│                                 ││ rustfmt.toml                                                                                          │"
"│                                 ││ src                                                                                                   │"
"│                                 ││ target                                                                                                │"
"│                                 ││ tests                                                                                                 │"
"│                                 ││ TODO.md                                                                                               │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"│                                 ││                                                                                                       │"
"└─────────────────────────────────┘└───────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Normal                                                                                                            ?-Help q/esc - Quit/Back "
